fix alignment issues

--- a/src/components/feature-block/feature-block.scss
+++ b/src/components/feature-block/feature-block.scss
@@ -33,7 +33,9 @@ $featureblocks-link-color: $white;
             width: 89%;
             margin: 0 auto;
         }
-        @media (min-width: 768px) {}
+        @media (min-width: 768px) {
+            width: 100%;
+        }
 
         & > h1,
         & > h2,
@@ -111,7 +113,7 @@ $featureblocks-link-color: $white;
         @media (max-width: 767px) {
         }
         @media (min-width: 768px) {
-            margin-right: 1em;
+            // margin-right: 1em;
         }
     }
 }
@@ -132,7 +134,7 @@ $featureblocks-link-color: $white;
         @media (max-width: 767px) {
         }
         @media (min-width: 768px) {
-            margin-left: 1em;
+            // margin-left: 1em;
         }
     }
 }
