--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -12,20 +12,21 @@
     }
     
     .feature-block {
+        @media (max-width: 767px) {}
+        @media (min-width: 768px) {
+            max-width: 1200px;
+        }
 
         & > .feature-block-image {
-            // @media (max-width: 767px) {
-            //     max-width: 60%;
-            // }
-            // @media (min-width: 768px) {
-            //     max-width: 60%;
-            // }
-            @include phone {max-width: 60%;}
+
+            @include phone {}
             @include tablet {
-                max-width: 40%;
+                max-width: 500px;
                 margin-left: 2em;
             }
-            @include desktop {max-width: 60%;}
+            @include desktop {
+                max-width: 500px;
+            }
         }
         & > .feature-block-details {
             @media (max-width: 767px) {}
@@ -39,7 +40,11 @@
                     text-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
                 }
                 @media (min-width: 768px) {
-                    
+                    color: #FFFFFF;
+                    font-size: 2.188rem;
+                    font-weight: bold;
+                    letter-spacing: 7px;
+                    line-height: 50px;
                 }
             }
             & > .feature-block-project-type {
@@ -49,7 +54,9 @@
                     line-height: 26px;
                 }
                 @media (min-width: 768px) {
-                    
+                    color: #9B9B9B;
+                    font-size: 1.125rem;
+                    line-height: 36px;
                 }
             }
             & > .feature-block-project-description {
@@ -60,7 +67,9 @@
                     line-height: 25px;
                 }
                 @media (min-width: 768px) {
-                    
+                    color: #E7E7E7;
+                    font-size: 1.125rem;
+                    line-height: 36px;
                 }
             }
             & > a {
@@ -68,7 +77,11 @@
                     font-size: 0.8125rem;
                 }
                 @media (min-width: 768px) {
-                    
+                    color: #FFFFFF;
+                    font-size: 1rem;
+                    font-weight: bold;
+                    letter-spacing: 5px;
+                    line-height: 25px;
                 }
 
             }
